--- a/1 - How to Make a Website/index.html
+++ b/1 - How to Make a Website/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Nick Pettit | Designer</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400,400i,700,700i,800" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -14,7 +15,7 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index.html">Portfolio</a></li>
+          <li><a href="index.html" class="selected">Portfolio</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -22,7 +23,7 @@
     </header>
     <div id="wrapper">
       <section>
-        <ul>
+        <ul id="gallery">
           <li>
             <a href="img/numbers-01.jpg">
               <img src="img/numbers-01.jpg" alt="">
@@ -56,8 +57,8 @@
         </ul>
       </section>
       <footer>
-        <a href="http://twitter.com/nickrp"><img src="img/twitter-wrap.png" alt="Twitter Logo"></a>
-        <a href="http://facebook.com/nickpettit"><img src="img/facebook-wrap.png" alt="Facebook Logo"></a>
+        <a href="http://twitter.com/nickrp"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="http://facebook.com/nickpettit"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
         <p>&copy; 2014 Nick Pettit.</p>
       </footer>
     </div>
